fixes alignment of components on individual lesson page
now center aligns card and table

--- a/static/css/layouts.css
+++ b/static/css/layouts.css
@@ -43,12 +43,4 @@
     margin: 10px;
 }
 
-.card-listing {
-    background-color: #fff;
-    color: var(--primary-dark);
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.3);
-    padding: 20px;
-    margin: 10px 0;
-    width: 30%;
-}
+
